<resources>
    <string name="app_name">farmerStore</string>
    <string name="username">ชื่อผู้ใช้</string>
    <string name="password">รหัสผ่าน</string>
    <string name="tel">เบอร์โทร</string>
    <string name="fullname">ชื่อ-นามสกุล</string>
    <string name="email">E-Mail</string>
    <string name="address">ที่อยู่</string>
    <string name="edit">แก้ไข</string>
    <string name="deleteAccount">ลบบัญชีผู้ใช้</string>
    <string name="productPic">รูปสินค้า</string>
    <string name="productName">ชื่อสินค้า</string>
    <string name="price">ราคา</string>
    <string name="quantity">จำนวน</string>
    <string name="preorder">สินค้าสั่งจอง</string>
    <string name="datetosend">วันที่จัดส่งสินค้าได้</string>
    <string name="buyhistoty">ประวัติการซื้อสินค้า</string>
    <string name="selectdate">เลือกวันที่</string>
    <string name="level2Regis">ลงทะเบียนสมาชิกระดับ 2</string>
    <string name="date">วัน</string>
    <string name="month">เดือน</string>
    <string name="year">ปี</string>
    <string name="baht">บาท</string>
    <string name="savedata">บันทึกข้อมูล</string>
    <string name="confirm">ยืนยัน</string>
    <string name="kg">กิโลกรัม</string>
    <string name="unit">ผล</string>
    <string name="fruitNameSelect">เลือกชื่อผลไม้</string>
    <string name="fruitSpecies">ชื่อเพิ่มเติม</string>
    <string name="sellersetting">ตั้งค่าผู้ขาย</string>
    <string name="addproduct">เพิ่มสินค้า</string>
    <string name="sell">ขายไป </string>
    <string name="editProduct">แก้ไขสินค้า</string>
</resources>
