<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"
            android:textSize="16dp"
            android:text="@string/productPic"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/productName"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/price"/>

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:hint="100"
                android:includeFontPadding="false"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textSize="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/quantity"/>

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:hint="10"
                android:textAlignment="textEnd"
                android:includeFontPadding="false"
                android:inputType="number"
                android:textSize="16dp" />
            <Spinner
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="135dp"
                android:id="@+id/dropdownUnit">
            </Spinner>
        </RelativeLayout>

        <Switch
            android:id="@+id/switchPreorder"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:text="@string/preorder" />
        <RelativeLayout
            android:id="@+id/preorderlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/datetosend"/>
            <TextView
                android:id="@+id/button_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="150dp"
                android:includeFontPadding="false"
                android:text="@string/selectdate"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>